It will jump to the correct posotion when clicking on the jump tag.

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,25 +7,19 @@
 /* #container tag is used for all text boxes  */
 
 .container {
-  background-color: whitesmoke;
+  background-color: lavenderblush;
   opacity: .8;
-  width: 90%;
   min-height: auto;
-  height: 100%;
   padding-top: 50px;
   padding-bottom: 30px;
   padding-left: 100px;
-  margin: 20px;
-  margin-left: 3rem;
-  margin-right: 3rem;
+  margin-top: 5rem;
   margin-bottom: 5rem;
   text-align: left;
-  position: relative;
   z-index: 0;
   font-family: 'Libre Baskerville', serif;
   border-style: double;
   border-color: lavender;
-
 }
 
 /* styling for text in div tags */
@@ -43,11 +37,12 @@ div.sticky {
   top: 0;
   background-color: lavenderblush;
   width: 75%;
-  height: 20rem;
+  height: 20em;
   z-index: 1;
   margin-left: 10rem;
   margin-right: 10em;
-  padding-right: 10rem;
+  padding-right: 10%;
+  padding-bottom: 10%;
 
 }
 
@@ -57,7 +52,7 @@ div.sticky {
   color: black;
   text-align: left;
   background-color: lightpink;
-  border-radius: 10%;
+  border-radius: 11%;
   float: right;
   width: auto;
   height: auto;
@@ -148,4 +143,9 @@ h3 {
   margin-bottom: 5%;
   margin-left: 4%;
   margin-right: 4%;
+}
+
+/* where the a jump tag lands on content */
+a {
+  padding-top: 28%;
 }
